<resources>
    <string name="app_name">My Asample3</string>
    <string name="button">Button</string>
    <string name="phone_number_username_or_email">Phone number, username or email</string>
    <string name="or">OR</string>
    <string name="ig">ig</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="sign_up"><u>Sign Up.</u></string>
    <string name="log_in">Log In</string>
    <string name="continue_as"><u>Continue as</u></string>
    <string name="fb">fb</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
</resources>